[gd_scene load_steps=30 format=2]

[ext_resource path="res://BoosAssets/ayudante/Ghost-Files/PNG/ghost-appears.png" type="Texture" id=1]
[ext_resource path="res://BoosAssets/ayudante/Ghost-Files/PNG/ghost-vanish.png" type="Texture" id=2]
[ext_resource path="res://BoosAssets/ayudante/Ghost-Files/PNG/ghost-idle.png" type="Texture" id=3]
[ext_resource path="res://BoosAssets/ayudante/dialogo.png" type="Texture" id=4]
[ext_resource path="res://Ayudante/Guia.gd" type="Script" id=5]
[ext_resource path="res://assets/Letras/riverflows/RIVERFLOWS.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5282, 50.7362 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 48 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "quieto",
"speed": 7.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "desaparicion",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "aparicion",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = ExtResource( 6 )

[node name="Guia" type="Area2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -28.377, -23.5666 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "quieto"
frame = 4

[node name="Dialogo" type="Sprite" parent="."]
position = Vector2( -39.044, -43.5359 )
scale = Vector2( 1.40733, 1.11709 )
texture = ExtResource( 4 )
flip_h = true

[node name="Label" type="Label" parent="."]
margin_left = -70.0
margin_top = -64.0
margin_right = 232.0
margin_bottom = 112.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Guia_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Guia_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
